@@ -134,4 +134,5 @@ Greg Ward
 .SH BUGS
 This program really only works with perspective views.
 .SH "SEE ALSO"
-pcomb(1), pinterp(1), pmblur(1), pmdblur(1), rcalc(1), rpict(1), vwright(1)
+pcomb(1), pinterp(1), pmblur(1), pmblur2(1),
+pmdblur(1), rcalc(1), rpict(1), vwright(1)
