@@ -117,4 +117,5 @@ Greg Ward
 Changes in the view shift and lift vectors or the fore and aft
 clipping planes are not blurred.
 .SH "SEE ALSO"
-pcomb(1), pdfblur(1), pinterp(1), pmdblur(1), rcalc(1), rpict(1), vwright(1)
+pcomb(1), pdfblur(1), pinterp(1), pmblur2(1),
+pmdblur(1), rcalc(1), rpict(1), vwright(1)
