@@ -130,4 +130,5 @@ fr1023.hdr fr1023.zbf fr1024.hdr fr1024.zbf > fr1023b.hdr
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-pcomb(1), pdfblur(1), pinterp(1), pmblur(1), rcalc(1), rpict(1), vwright(1)
+pcomb(1), pdfblur(1), pinterp(1), pmblur(1), pmblur2(1),
+rcalc(1), rpict(1), vwright(1)
