@@ -18,7 +18,7 @@ LIBDIR = /usr/local/lib/ray
 PROGS = pfilt ttyimage psign ra_tiff normtiff \
 pvalue pcompos protate ra_hexbit ra_bmp \
 ra_t8 ra_t16 pcomb pinterp pflip ra_ppm ximage xshowtrace \
-ra_rgbe ra_pict ra_ps pextrem ra_gif ra_xyze macbethcal pcond pcwarp
+ra_rgbe ra_pict ra_ps pextrem ra_gif ra_xyze macbethcal pcond pcwarp pmblur2
 
 all:	$(PROGS) $(SPECIAL)
 
@@ -117,6 +117,9 @@ pcomb:	pcomb.o
 pinterp:	pinterp.o
 	$(CC) $(CFLAGS) -o pinterp pinterp.o -lrtrad $(MLIB)
 
+pmblur2:	pmblur2.o
+	$(CC) $(CFLAGS) -o pmblur2 pmblur2.o -lrtrad $(MLIB)
+
 ra_xyze:	ra_xyze.o
 	$(CC) $(CFLAGS) -o ra_xyze ra_xyze.o -lrtrad $(MLIB)
 
@@ -166,10 +169,10 @@ pf2.o ra_ps.o ra_t16.o:	../common/random.h
 
 neuclrtab.o clrtab.o pfilt.o pf2.o pf3.o ttyimage.o \
 psign.o protate.o ra_hexbit.o pextrem.o pcompos.o \
-pflip.o ra_t8.o ra_t16.o ra_tiff.o ra_pict.o \
+pflip.o ra_t8.o ra_t16.o ra_tiff.o ra_pict.o pmblur2.o \
 ra_ps.o pvalue.o pcomb.o pinterp.o:	../common/color.h
 
-neuclrtab.o pvalue.o protate.o pinterp.o psign.o \
+neuclrtab.o pvalue.o protate.o pinterp.o psign.o pmblur2.o \
 xshowtrace.o clrtab.o pcomb.o pfilt.o pf3.o image.o:	../common/standard.h \
 ../common/rtmisc.h ../common/rtio.h \
 ../common/rtmath.h ../common/mat4.h ../common/fvect.h \
@@ -214,5 +217,5 @@ x11findwind.c:	../common/x11findwind.c
 
 macbethcal.o normtiff.o pcomb.o pcompos.o pcond.o pextrem.o pfilt.o \
 pflip.o psign.o pvalue.o ra_bmp.o ra_gif.o ra_pict.o ra_ppm.o ra_ps.o \
-ra_rgbe.o ra_skel.o ra_t16.o ra_t8.o ra_tiff.o ra_xyze.o \
+ra_rgbe.o ra_skel.o ra_t16.o ra_t8.o ra_tiff.o ra_xyze.o pmblur2.o \
 ttyimage.o:	../common/platform.h
